# axum-snowflake-url-shortener

./: Cargo.toml  README.md  config.toml  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 0001_create_short_urls.sql
src/: configuration.rs  error.rs  lib.rs  main.rs  startup.rs
src/config/: mod.rs
src/domain/: model.rs  service.rs
src/http/: dto.rs  handlers.rs  router.rs
src/id/: base62.rs  generator.rs  mod.rs
src/storage/: mod.rs  postgres.rs  redis.rs
tests/: helpers.rs  mod.rs
tests/api/: health_check.rs  helpers.rs  mod.rs  redirect.rs  shorten.rs
tests/storage/: postgres.rs  redis.rs
